# DevOps-Course-Starter

./: .dockerignore  .env  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  README.md  ansible_playbook.yaml  deployment.yaml  docker-compose.yml  dockerfile  inventory.yaml  logging.conf  main.tf  outputs.tf  pyproject.toml  service.yaml  variables.tf
.github/workflows/: ci.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
todo_app/: ViewModel.py  app copy.py  app.py  debugger.py  flask_config.py  loggly.conf  logtodb.py  logtologgly.py  mongo.py  mongo_items.py  oauth.py  trello_items.py  view_model.py
todo_app/data/: item.py  mongoconfig.py
todo_app/templates/: index.html
todo_app/tests/: .env.test  apptest.py  item.py  test_client.py  test_mongodb.py  test_view_model.py  view_model.py
